--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -23,7 +23,10 @@
     "next": "14.2.13",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "simple-peer": "^9.11.1",
+    "socket.io-client": "^4.8.1",
     "swapy": "^0.4.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -33,7 +36,9 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
+    "@types/simple-peer": "^9.11.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
