--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
     "next-themes": "^0.3.0",
+    "peerjs": "^1.5.4",
     "react": "^18",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
